# compressO

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
LICENSES/ffmpeg/: README.md
LICENSES/gifski/: LICENSE  README.md
LICENSES/jpegoptim/: README.md
LICENSES/pngquant/: LICENSE  README.md
homebrew/: checksums.txt  compresso.rb  compresso.rb.template
homebrew/casks/: compresso-3.0.0.rb
scripts/: generate-latest-json.mjs  generate-latest-json.mts  homebrew-release.mts
src/: global.css  main.tsx  vite.env.d.ts
src-tauri/: Cargo.toml  compressO.desktop.template  tauri.conf.json  tauri.linux.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: domain.rs  ffmpeg.rs  ffprobe.rs  image.rs  image_info.rs  media_process.rs  mod.rs  server.rs
src-tauri/src/lib/: domain.rs  ffmpeg.rs  ffprobe.rs  image.rs
src-tauri/src/lib/tauri_commands/: ffmpeg.rs  ffprobe.rs  fs.rs  image.rs  media.rs  mod.rs
src-tauri/src/sys/: fs.rs  gpu.rs  mod.rs
src-tauri/src/tauri_commands/: dock.rs  ffmpeg.rs  ffprobe.rs  fs.rs  image.rs  media.rs  mod.rs  server.rs  updater.rs
src-tauri/src/utils/: duration.rs
src/components/Accordion/: index.tsx
src/components/AutoComplete/: index.tsx
src/components/Badge/: index.tsx
src/components/ColorPicker/: index.tsx
src/components/CompareSlider/: index.tsx
src/components/DatePicker/: index.tsx
src/components/Divider/: index.tsx
src/components/Icon/: registry.ts
src/components/ImageViewer/: index.tsx
src/components/Layout/: index.tsx
src/components/Markdown/: index.tsx
src/components/Modal/: index.tsx
src/hooks/: useSyncState.ts
src/routes/: __root.tsx
src/stores/: updateStore.ts
src/types/: app.ts  compression.ts
src/utils/: fs.ts  video.ts
website/: astro.config.mjs  package.json  pnpm-lock.yaml
website/src/: consts.ts
(+92 files in other folders)
