[package]
name = "compressO"
version = "1.0.0"
description = "Compress any video into a tiny size."
authors = ["Code For Real"]
license = "AGPL-3.0-only"
repository = "https://github.com/codeforreal1/compressO"
default-run = "compressO"
edition = "2021"
rust-version = "1.67"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
nanoid = "0.4.0"
infer = "0.15.0"
image = "0.25.1"
log = "0.4.21"
shared_child = "1.0.0"
regex = "1.10.4"
crossbeam-channel = "0.5.12"
strum = { version = "0.26.2", features = ["derive"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-updater = "2.0.0"
wgpu = "23.0.1"
clipboard-rs = "0.3.2"
oxipng = { version = "9", features = ["parallel", "zopfli", "filetime"], default-features = false }
webp = "0.3"
img-parts = "0.4.0"
usvg = "0.45.1"
svgcleaner = "0.9.5"
vtracer = "0.6.5"
resvg = "0.44.0"
exiftool-rs = "0.4.4"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
urlencoding = "2.1"
tokio-util = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!z
custom-protocol = ["tauri/custom-protocol"]
